<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@drawable/rounded_box">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <TextView
            android:id="@+id/fPMessage"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_instructions"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/email_or_phone_hint"
            android:textSize="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text_border"
            android:layout_marginTop="15dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/send"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/bckToLogin"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_below="@+id/sendBtn"/>
    </RelativeLayout>
</LinearLayout>

