<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/projectDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:src="@drawable/back_arrow"
            android:textSize="30dp"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"/>

        <TextView
            android:id="@+id/crowdfund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/project_details"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/projectImage"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:src="@drawable/projectimage"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/projectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/projectImage"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/inter_bold"
                android:text="@string/title2"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/donateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="70dp"
                android:src="@drawable/donatebtn"
                android:layout_below="@id/projectTitle"/>

            <TextView
                android:id="@+id/donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/donateBtn"
                android:layout_marginLeft="73dp"
                android:layout_marginTop="-4dp"
                android:text="@string/donate"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/moneyGoalImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/moneygoal"
                android:layout_below="@id/projectTitle"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="80dp"
                android:layout_toRightOf="@+id/donateBtn"/>

            <TextView
                android:id="@+id/totalMoneyGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/moneyGoalImage"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="-4dp"
                android:layout_toRightOf="@+id/donate"
                android:text="@string/total_money_goal"
                android:textColor="@color/black" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/proj_details_border"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/details"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/descriptionTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description2"
                android:fontFamily="@font/inter"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:layout_toRightOf="@id/descriptionTxtView"
                android:justificationMode="inter_word"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/moneyGoalTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_goal2"
                android:fontFamily="@font/inter"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/moneyGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_amount"
                android:layout_toRightOf="@id/moneyGoalTxtView"
                android:justificationMode="inter_word"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/endDateTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:fontFamily="@font/inter"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_toRightOf="@id/endDateTxtView"
                android:justificationMode="inter_word"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
