<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/eucalyptus"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_bold"
                android:text="@string/create_new_account"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/alrdyReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:textColor="@color/white"
                    android:text="@string/already_registered" />

                <TextView
                    android:id="@+id/loginTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightGreen"
                    android:text="@string/login_here"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/alrdyReg"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:background="@drawable/signup_border"
                    android:padding="10dp"
                    android:inputType="textCapWords"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:background="@drawable/signup_border"
                    android:padding="10dp"
                    android:inputType="textCapWords"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:background="@drawable/signup_border"
                    android:inputType="textCapWords"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:background="@drawable/signup_border"
                    android:inputType="textPassword"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reenter_password"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:id="@+id/reEnterPass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:background="@drawable/signup_border"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_button"
                    android:layout_marginTop="10dp"
                    android:text="@string/register"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>