<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/lightgray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileimageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/toji"
            app:strokeWidth="2dp"
            app:strokeColor="#FF0000"
            app:shapeAppearanceOverlay="@style/Circular"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/profileimageView"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/jackie_chan"/>

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:text="Title" />

        <!-- Description -->
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:text="Description" />

        <!-- Money Goal -->
        <TextView
            android:id="@+id/money_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:text="Money Goal" />

        <!-- Deadline -->
        <TextView
            android:id="@+id/deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/money_goal"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:text="Deadline" />

        <TextView
            android:id="@+id/postcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deadline"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:text="@string/world_environment_day" />

        <!-- Image -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/postcontent"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/optionsImageButton"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/tredot"
            android:clickable="true"
            android:focusable="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:layout_marginTop="16dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/commentRecyclerView"
            android:hint="Enter your comment here"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/heart"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/commentEditText"
            android:layout_below="@id/commentRecyclerView"
            android:layout_marginLeft="10dp"
            android:src="@drawable/heart" />

        <Button
            android:id="@+id/postCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/heart"
            android:layout_below="@id/commentRecyclerView"
            android:text="@string/post"
            android:textSize="15dp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
